--- a/templates/activitytree/dashboard.html
+++ b/templates/activitytree/dashboard.html
@@ -133,7 +133,7 @@
                         uri: this.getAttribute("uri"),
                         icon: icon,
                         item_class:item_class,
-                        percentage:get_percentage(this)
+                        progress:get_percentage(this)
 
 
                     });
