--- a/templates/activitytree/dashboard.html
+++ b/templates/activitytree/dashboard.html
@@ -38,8 +38,8 @@
                          </p>
                     </div>
                     <div class="col-md-4">
-                        <div class="progress [[progress_type]]">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="[[progress]]" aria-valuemin="0"
+                        <div class="progress">
+                            <div class="progress-bar [[progress_type]]" role="progressbar" aria-valuenow="[[progress]]" aria-valuemin="0"
                                  aria-valuemax="100" style="width: [[progress]]%;">[[progress]]%
                             </div>
                         </div>
