--- a/templates/activitytree/dashboard.html
+++ b/templates/activitytree/dashboard.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="progress">
-                            <div class="progress-bar [[progress_type]]" role="progressbar" aria-valuenow="[[progress]]" aria-valuemin="0"
+                            <div class="progress-bar [[progress_type]]" role="progressbar" aria-valuenow="[[progress]]" aria-valuemin="2em"
                                  aria-valuemax="100" style="width: [[progress]]%;">[[progress]]%
                             </div>
                         </div>
