--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -148,10 +148,13 @@
 
                          </div>
                      [[/objective_status]]
+
                          <div class="col-md-4">
-                              <i class="fa fa-puzzle-piece fa-2x"></i><br/>
-                             <small>[[objective_measure]]</small>
+                              <h3>[[objective_measure]]</h3>
+
+                             <small>CALIFICACIÓN</small>
                          </div>
+
                      </div>
 			</div>
 		</div>
