--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -145,12 +145,14 @@
                      [[#objective_status]]
                          <div class="col-md-4">
                            <i class="fa fa-check fa-2x"></i><br/>
+                            <small>COMPLETO</small>
+
 
                          </div>
                      [[/objective_status]]
 
                          <div class="col-md-4">
-                              <h3>[[objective_measure]]</h3>
+                              <span class="activity-panel-info">[[objective_measure]]</span>
 
                              <small>CALIFICACIÓN</small>
                          </div>
