--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -143,7 +143,7 @@
 
                      <div class="row">
                      [[#objective_status]]
-                         <div class="col-md-4">
+                         <div class="col-md-4 text-center">
                            <i class="fa fa-check fa-2x"></i><br/>
                             <small>COMPLETO</small>
 
@@ -151,11 +151,19 @@
                          </div>
                      [[/objective_status]]
 
-                         <div class="col-md-4">
-                              <span class="activity-panel-info">[[objective_measure]]</span>
+                        <div class="col-md-4 text-center">
+                              <span class="h3">[[objective_measure]]</span>
+
+                             <small>INTENTOS</small>
+                         </div>
+
+                         <div class="col-md-4 text-center">
+                              <span class="h3">[[objective_measure]]</span>
 
                              <small>CALIFICACIÓN</small>
                          </div>
+
+
 
                      </div>
 			</div>
