--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -134,12 +134,7 @@
 				<div class="modal-footer" style="text-align: left">
 
                      </div>
-                         <ul class="list-group">
-                            <li class="list-group-item">
-                            <span class="badge">[[num_attempts]]</span>
-                            Intentos:
-                            </li>
-                        </ul>
+
 
                      <div class="row">
                      [[#objective_status]]
@@ -152,7 +147,7 @@
                      [[/objective_status]]
 
                         <div class="col-md-4 text-center">
-                              <span class="h3">[[objective_measure]]</span>
+                              <span class="h3">[[num_attempts]]</span>
 
                              <small>INTENTOS</small>
                          </div>
