--- a/templates/activitytree/test.html
+++ b/templates/activitytree/test.html
@@ -83,11 +83,6 @@
 
      <input type="submit" name="check" value="Re-Enviar" class="btn btn-primary">
 
-        <ul class="pager">
-                     <li class="previous"><span class="nav_prev" > &larr; Anterior</span></li>
-                    <li class="next"><span class="nav_next">  Continuar &rarr;</span></li>
-        </ul>
-
 
     {% else %}
 
@@ -99,6 +94,29 @@
 
 
 		</form>
+<row>
+    <form id="nav_form"   role="form" action="{{root}}" method = "POST">{% csrf_token %}
+
+
+               <ul class="pager">
+                     <li class="previous"><span class="nav_prev" > &larr; Anterior</span></li>
+                    <li class="next"><span class="nav_next">  Continuar &rarr;</span></li>
+               </ul>
+
+
+        <!-- <div class="form-group">
+            <label for="r10">Comentario:</label>
+            <select id="exit" name="objective_measure" class="form-control" >
+				<option value="70"> Ninguno </option>
+				<option value="100">Si le entendí</option>
+				<option value="50">Más o menos  </option>
+				<option value="20"> Para nada </option>
+	        </select>
+
+        </div> -->
+       </form>
+   </row>
+
 
 
 {% endblock content %}
