--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -317,7 +317,7 @@
                              objective_status:is_satisfied,
                              objective_measure:this.getAttribute("objective_measure"),
                              show_objective_measure:has_objective_measure,
-                             show_attempts:show_attempts
+                             show_attempts:has_objective_measure
 
 
                          });
