--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -137,6 +137,8 @@
 
 
                      <div class="row">
+
+
                      [[#objective_status]]
                          <div class="col-md-4 text-center">
                            <i class="fa fa-check fa-2x"></i><br/>
@@ -145,6 +147,15 @@
 
                          </div>
                      [[/objective_status]]
+                     [[ˆobjective_status]]
+                        <div class="col-md-4 text-center">
+                           <i class="fa fa-eye fa-2x"></i><br/>
+                            <small>NO VISTO</small>
+
+
+                         </div>
+                     [[/objective_status]]
+
 
                      [[#show_attempts]]
                         <div class="col-md-4 text-center">
