--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -147,7 +147,7 @@
 
                          </div>
                      [[/objective_status]]
-                     [[ˆobjective_status]]
+                     [[^objective_status]]
                         <div class="col-md-4 text-center">
                            <i class="fa fa-eye fa-2x"></i><br/>
                             <small>NO VISTO</small>
