--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -149,8 +149,8 @@
                      [[/objective_status]]
                      [[^objective_status]]
                         <div class="col-md-4 text-center">
-                           <i class="fa fa-eye fa-2x"></i><br/>
-                            <small>NO VISTO</small>
+                           <i class="fa fa-eye-slash fa-2x"></i><br/>
+                            <small>INCOMPLETO</small>
 
 
                          </div>
