--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -169,7 +169,7 @@
                          <div class="col-md-4 text-center">
                               <span class="h3">[[objective_measure]]</span>
                                 <br/>
-                             <small>CALIFICACIÓN</small>
+                             <small>PUNTOS</small>
                          </div>
                       [[/show_objective_measure]]
 
