--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -254,7 +254,7 @@
 
         Mustache.tags = ['[[', ']]'];
 
-        XML_NAV = "{{XML_NAV|safe}}";
+        //XML_NAV = "{{XML_NAV|safe}}";
         xmlDoc= $.parseXML(XML_NAV);
         $xml = $(xmlDoc)
         $current = $xml.find("item[is_current|='True']");
