--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -437,7 +437,7 @@ background-position: left top;
 
   <script type="text/javascript" charset="utf-8">
 
-
+        XML_NAV = "{{XML_NAV|safe}}";
 
         $( document ).ready(function() {
 
