display total points

--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -451,7 +451,7 @@ background-position: left top;
                 var val =  this.getAttribute("objective_measure");
                 if (isNaN(val)==false)
                 {
-                puntos_totales += Number($(this).val());
+                puntos_totales += Number(val);
                 }
             });
 
