--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -425,7 +425,7 @@ background-position: left top;
         XML_NAV = "{{XML_NAV|safe}}";
 
         xmlDoc= $.parseXML(XML_NAV);
-        $xml = $(xmlDoc)
+        $xml = $(xmlDoc);
 
 
         $( document ).ready(function() {
