--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -447,7 +447,7 @@ background-position: left top;
             });
 
 
-            $("#user_points").append(  $('<span>').value(  puntos_totales));
+            $("#user_points").append(  $('<span>').text( puntos_totales));
 
 
 
