--- a/templates/activitytree/program.html
+++ b/templates/activitytree/program.html
@@ -48,7 +48,7 @@
 
 {% block content %}
 
-
+<div class="row">
   <div class="panel panel-default">
         <div class="panel-heading">
             <h3 style="display: inline;" class="panel-title">{{program_quiz.title}}</h3>
@@ -101,7 +101,7 @@
 
 
 
-
+</div>
  <div class="row">
 
          <form id="nav_form"   role="form" action="{{root}}" method = "POST">{% csrf_token %}
