--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -397,7 +397,7 @@ background-position: left top;
                 </ol>
             {%endif%}
         </div>
-        <div id="user_points" class="col-md-2">
+        <div id="user_points" class="col-md-2 bg-info">
         </div>
      </div>
 
@@ -447,7 +447,7 @@ background-position: left top;
             });
 
 
-            $("#user_points").append($('<h5>').attr({ class:'text-info'}).text('Mis puntos: '+puntos_totales));
+            $("#user_points").append($('<h5>').attr({ class:''}).text('Mis puntos: '+puntos_totales));
 
 
 
