--- a/templates/activitytree/base.html
+++ b/templates/activitytree/base.html
@@ -397,7 +397,7 @@ background-position: left top;
                 </ol>
             {%endif%}
         </div>
-        <div id="user_points" class="col-md-2 bg-info">
+        <div id="user_points" class="col-md-2 bg-info hidden-xs hidden-sm ">
         </div>
      </div>
 
