--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -43,7 +43,7 @@
 {% block scripts %}
 
 <script id="container_template" type="x-tmpl-mustache">
-	<div class="col-xs-12 col-md-4">
+	<div class="col-xs-12 col-md-4 col-sm-6">
 		<div class="thumbnail">
 		   <a href="[[uri]]">
 		       <img src="[[image]]" alt="...">
@@ -82,7 +82,7 @@
 
 
 <script id="disabled_container_template" type="x-tmpl-mustache">
-	<div class="col-xs-12 col-md-4">
+	<div class="col-xs-12 col-md-4 col-sm-6">
 		<div class="thumbnail">
 		   <a href="[[uri]]">
 		       <img src="[[image]]" alt="...">
@@ -116,7 +116,7 @@
 </script>
 
 <script id="activity_template" type="x-tmpl-mustache">
-	<div class="col-xs-12 col-md-4">
+	<div class="col-xs-12 col-md-4 col-sm-6">
 		<div class="thumbnail">
 		   <a href="[[uri]]">
 		       <img src="[[image]]" alt="...">
@@ -182,7 +182,7 @@
 </script>
 
 <script id="disabled_activity_template" type="x-tmpl-mustache">
-	<div class="col-xs-12 col-md-4">
+	<div class="col-xs-12 col-md-4 col-sm-6">
 		<div class="thumbnail">
 		   	<div class="caption">
 			   <h4><small><i class="[[icon]]"></i> [[activity_type]]  </small></h4>
