--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -6,7 +6,12 @@
    <div class = "row">
         <div class="col-md-9">
                 <div class="video">
+                    <div id="player">
+
+                    </div>
+                    <!--
                     <iframe width="640" height="510" src="{{ video.url }}" frameborder="0" allowfullscreen></iframe>
+                    -->
                 </div>
         </div>
         <div class="col-md-3">
@@ -57,6 +62,55 @@
 {% block scripts %}
          <script type="text/javascript" charset="utf-8">
 
+        // 2. This code loads the IFrame Player API code asynchronously.
+        var tag = document.createElement('script');
+        tag.src = "https://www.youtube.com/iframe_api";
+        var firstScriptTag = document.getElementsByTagName('script')[0];
+        firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+
+        // 3. This function creates an <iframe> (and YouTube player)
+      //    after the API code downloads.
+      var player;
+      function onYouTubeIframeAPIReady() {
+        player = new YT.Player('player', {
+          height: '510',
+          width: '640',
+          videoId: '{{video.youtube_id}}',
+          events: {
+            'onReady': onPlayerReady,
+            'onStateChange': onPlayerStateChange
+          }
+        });
+      }
+
+        // 4. The API will call this function when the video player is ready.
+      function onPlayerReady(event) {
+        event.target.playVideo();
+      }
+
+      // 5. The API calls this function when the player's state changes.
+      //    The function indicates that when playing a video (state=1),
+      //    the player should play for six seconds and then stop.
+      var done = false;
+      function onPlayerStateChange(event) {
+        if (event.data == YT.PlayerState.PLAYING && !done) {
+          setTimeout(stopVideo, 6000);
+          done = true;
+
+
+        }
+      }
+
+      function stopVideo() {
+        var form =  $("#nav_form");
+        form.append( $('<input>').attr({ type: 'hidden',
+                                                    name: 'nav_event',
+                                                    value:'next'
+                                                  }));
+
+                  form.submit();
+
+      }
 
 $('#rating-info').raty({
     path: '{{MEDIA_URL}}images',
