video auto continue when finished

--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -91,17 +91,18 @@
       // 5. The API calls this function when the player's state changes.
       //    The function indicates that when playing a video (state=1),
       //    the player should play for six seconds and then stop.
-      var done = false;
+      //var done = false;
+
       function onPlayerStateChange(event) {
-        if (event.data == YT.PlayerState.PLAYING && !done) {
-          setTimeout(stopVideo, 6000);
-          done = true;
+        if (event.data == YT.PlayerState.ENDED ) {
+          nextActivity();
+         // done = true;
 
 
         }
       }
 
-      function stopVideo() {
+      function nextActivity() {
         var form =  $("#nav_form");
         form.append( $('<input>').attr({ type: 'hidden',
                                                     name: 'nav_event',
