--- a/templates/activitytree/video.html
+++ b/templates/activitytree/video.html
@@ -75,7 +75,7 @@
         player = new YT.Player('player', {
           height: '510',
           width: '640',
-          videoId: '{{video.youtube_id}}',
+          playerVars: {'rel': 0, 'showinfo': 0, 'hidecontrols': 1 },
           events: {
             'onReady': onPlayerReady,
             'onStateChange': onPlayerStateChange
@@ -85,7 +85,27 @@
 
         // 4. The API will call this function when the video player is ready.
       function onPlayerReady(event) {
+
+          {% if video.startSeconds %}
+
+            event.target.cueVideoById({
+            videoId: '{{video.youtube_id}}',
+            startSeconds: {{ video.startSeconds }},
+            endSeconds: {{ video.endSeconds  }}
+
+    });
+
+              {% else %}
+
+              event.target.cueVideoById({
+            videoId: '{{video.youtube_id}}'}
+
+    );
+          {% endif %}
+
         event.target.playVideo();
+
+
       }
 
       // 5. The API calls this function when the player's state changes.
