--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -254,25 +254,26 @@
     $( document ).ready(function() {
 
         Mustache.tags = ['[[', ']]'];
+        var container_template = $('#container_template').html();
+        var activity_template = $('#activity_template').html();
+        var disabled_activity_template = $('#disabled_activity_template').html();
+        var disabled_container_template = $('#disabled_activity_template').html();
+        Mustache.parse(container_template);   // optional, speeds up future uses
+        Mustache.parse(activity_template);   // optional, speeds up future uses
 
         var $current = $xml.find("item[is_current|='True']");
-        if ($current[0].getAttribute("is_container")=="True") {
-            var container_template = $('#container_template').html();
-            var activity_template = $('#activity_template').html();
-            var disabled_activity_template = $('#disabled_activity_template').html();
-            var disabled_container_template = $('#disabled_activity_template').html();
-            Mustache.parse(container_template);   // optional, speeds up future uses
-            Mustache.parse(activity_template);   // optional, speeds up future uses
+        if ($current[0].getAttribute("is_container") == "True") {
+
 
             $current.children().each(function (index) {
                 var rendered = "";
                 var uri_string = this.getAttribute("uri");
                 var recommended_value = this.getAttribute("recomended_value");
-                if (recommended_value == "None" || recommended_value == "0" )
+                if (recommended_value == "None" || recommended_value == "0")
                     recommended_value = 0;
 
                 var template;
-                if (this.getAttribute("pre_condition")!="hidden" && this.getAttribute("is_visible")=="True" ) {
+                if (this.getAttribute("pre_condition") != "hidden" && this.getAttribute("is_visible") == "True") {
                     if (this.getAttribute("is_container") == "True") {
 
                         if (this.getAttribute("pre_condition") == "disabled")
@@ -334,6 +335,81 @@
 
                     }
                 }
+
+                if (this.getAttribute("is_visible") == "False"
+                        && this.getAttribute("is_container") == "True"
+                        && this.getAttribute("pre_condition") != "disabled") {
+
+                    $(this).children().each(function (index) {
+                        var rendered = "";
+                        var uri_string = this.getAttribute("uri");
+                        var recommended_value = this.getAttribute("recomended_value");
+                        if (recommended_value == "None" || recommended_value == "0")
+                            recommended_value = 0;
+
+                        var template;
+                        if (this.getAttribute("pre_condition") != "hidden" && this.getAttribute("is_visible") == "True") {
+                            if (this.getAttribute("is_container") == "True") {
+
+                                if (this.getAttribute("pre_condition") == "disabled")
+                                    template = disabled_container_template;
+                                else
+                                    template = container_template;
+
+                                rendered = Mustache.render(template, {
+                                    name: this.getAttribute("heading"),
+                                    uri: uri_string,
+                                    icon: "fa fa-folder-open",
+                                    image: this.getAttribute("image"),
+                                    description: this.getAttribute("description"),
+                                    activity_type: this.getAttribute("secondary_text"),
+                                    id: this.getAttribute("activity"),
+                                    rating: recommended_value,
+                                    children_activities: get_children_activities(this),
+                                    objective_status: (this.getAttribute("objective_status") == "satisfied")
+
+                                });
+                            }
+
+
+                            else {
+                                var activity_type = get_icon(uri_string);
+
+                                if (this.getAttribute("pre_condition") == "disabled")
+                                    template = disabled_activity_template;
+                                else
+                                    template = activity_template;
+
+
+                                var show_attempts = !(uri_string.lastIndexOf("/activity/", 0) === 0);
+
+                                var is_satisfied = this.getAttribute("objective_status") == "satisfied";
+                                var has_objective_measure = this.getAttribute("objective_measure") != "None";
+
+
+                                rendered = Mustache.render(template, {
+                                            name: this.getAttribute("heading"),
+                                            uri: uri_string,
+                                            icon: activity_type.icon,
+                                            image: this.getAttribute("image"),
+                                            description: this.getAttribute("description"),
+                                            activity_type: activity_type.activity_type,
+                                            id: this.getAttribute("activity"),
+                                            rating: recommended_value,
+                                            num_attempts: this.getAttribute("num_attempts"),
+                                            attempt_limit: this.getAttribute("attempt_limit"),
+
+                                            objective_status: is_satisfied,
+                                            objective_measure: Math.floor(this.getAttribute("objective_measure")),
+                                            show_objective_measure: has_objective_measure,
+                                            show_attempts: show_attempts}
+                                );
+                            }
+                         $("#navlist").append(rendered);
+                        }
+                    });
+                }
+
                 $("#navlist").append(rendered);
                 if (recommended_value) {
                     $('#rating-' + this.getAttribute("activity")).raty({
@@ -345,11 +421,8 @@
 
 
             });
-
         }
-
     });
-
 </script>
 
 {% endblock scripts %}
