go next after login, needs cookies

--- a/templates/activitytree/welcome.html
+++ b/templates/activitytree/welcome.html
@@ -140,7 +140,7 @@ body {
 
             <h2>{{c.root.name}}</h2>
             {{ c.short_description|safe }}
-            <a class="btn btn-primary" href="{{ c.root.uri }}?nav=start" role="button">Vamos &raquo;</a>
+            <a class="btn btn-primary" href="{{ c.root.uri }}" role="button">Vamos &raquo;</a>
         </div>
 
          {% endfor %}
