go next after login, needs cookies

--- a/templates/activitytree/container.html
+++ b/templates/activitytree/container.html
@@ -3,7 +3,11 @@
 
 
 {% block content %}
+     <div class = "row">
 
+     {{content|safe}}
+
+     </div>
 
     <div id="navlist" class = "row">
 
